fixed cards display on css and html

--- a/src/indexTEST.html
+++ b/src/indexTEST.html
@@ -14,55 +14,56 @@
     </header>
 
     <main>
-        <!-- cards will be created here and added in a columns -->
-        <!-- Manager card -->
-        <div class="row">
+    <!-- cards will be created here and added in a columns -->
+    <div class="row">
 
+        <!-- Manager card -->
         <div class="card">
-        <div class="manager">
-            <div class="title">
-                <h2>Name of Manager</h2>
-                <h3><span>&#x2615</span> Manager</h3>
+            <div class="manager">
+                <div class="title">
+                    <h2 class="titlehead">Maribel</h2>
+                    <h3><span>&#x2615</span> Manager</h3>
+                </div>
+                <div class="content">
+                    <p>ID: number</p>
+                    <span>Email:</span><a href="mailto:maribel.montes4@gmail.com"> montes4@gmail.com</a>
+                    <p>Office number: 1234</p>
+                </div>
             </div>
-            <div class="content">
-                <p>ID: number</p>
-                <a hrerf="emai@me.com">Email:emai@me.com</a>
-                <p>Office number: numberCH</p>
-            </div>
-        
         </div>
-    </div>
 
         <!-- Engineer card -->
         <div class="card">
-        <div class="engineer">
-            <div class="title">
-                <h2>Name of Engineer</h2>
-                <h3><span>&#128083</span> Engineer</h3>
-            </div>
-            <div class="content">
-                <p>ID: number</p>
-                <a hrerf="emai@me.com">Email:emai@me.com</a>
-                <p>Office number: numberCH</p>
+            <div class="engineer">
+                <div class="title">
+                    <h2 class="titlehead">Samira</h2>
+                    <h3><span>&#128083</span> Engineer</h3>
+                </div>
+                <div class="content">
+                    <p>ID: number</p>
+                    <span>Email:</span><a href="mailto:maribel.montes4@gmail.com"> montes4@gmail.com</a>
+                    <br><br>
+                    <span class="link">GitHub:</span><a class="link" href="https://github.com/MaryMD98"> MaryMD98</a>
+                </div>
             </div>
         </div>
-    </div>
 
         <!-- Intern Card -->
         <div class="card">
-        <div class="intern">
-            <div class="title">
-                <h2>Name of Intern</h2>
-                <h3><span>&#127891 &#8205</span> Intern</h3>
-            </div>
-            <div class="content">
-                <p>ID: number</p>
-                <a hrerf="emai@me.com">Email:emai@me.com</a>
-                <p>Office number: numberCH</p>
+            <div class="intern">
+                <div class="title">
+                    <h2 class="titlehead">Celina</h2>
+                    <h3><span>&#127891 &#8205</span> Intern</h3>
+                </div>
+                <div class="content">
+                    <p>ID: number</p>
+                    <span>Email:</span><a href="mailto:maribel.montes4@gmail.com"> montes4@gmail.com</a>
+                    <p>School: Utexas</p>
+                </div>
             </div>
         </div>
+
     </div>
-</div>
     </main>
     
 </body>
