fixed issue with new tab on the github:

--- a/src/indexTEST.html
+++ b/src/indexTEST.html
@@ -43,7 +43,7 @@
                     <p>ID: number</p>
                     <span>Email:</span><a href="mailto:maribel.montes4@gmail.com"> montes4@gmail.com</a>
                     <br><br>
-                    <span class="link">GitHub:</span><a class="link" href="https://github.com/MaryMD98"> MaryMD98</a>
+                    <span>GitHub:<a href="https://github.com/MaryMD98" target="_blank" rel="noopener noreferrer"> MaryMD98</a></span>
                 </div>
             </div>
         </div>
